--- a/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj
+++ b/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="CA2_BinaryTree_DianeDalyop.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\Desktop\Binary Tree Source\BinaryTree.h" />
+    <ClInclude Include="..\..\..\..\Desktop\Binary Tree Source\BSTNode.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
