--- a/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj.filters
+++ b/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\Desktop\Binary Tree Source\BinaryTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Desktop\Binary Tree Source\BSTNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
