Contains key and modifications for clear tree

--- a/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj
+++ b/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="BSTNode.h" />
+    <ClInclude Include="EntityKeyPair.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
