--- a/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj.filters
+++ b/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="BSTNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EntityKeyPair.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
