--- a/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj
+++ b/CA2_BinaryTree_DianeDalyop/CA2_BinaryTree_DianeDalyop.vcxproj
@@ -134,6 +134,9 @@
     <ClInclude Include="BSTNode.h" />
     <ClInclude Include="EntityKeyPair.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\myfathersDragon.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
